@@ -25,6 +25,8 @@
 
 #include "../misc/lists.h"
 
+#include <qpopupmenu.h>
+
 #include <klistview.h>
 #include <kiconloader.h>
 
@@ -38,6 +40,7 @@ class TypesDialog : public TypesDialogBase
   // necessary because some MacroList functions need it..
   KigPart& mpart;
   const KIconLoader* il;
+  QPopupMenu* popup;
 public:
   TypesDialog( QWidget* parent, KigPart& );
   ~TypesDialog();
@@ -51,6 +54,7 @@ protected slots:
   void exportType();
   void importTypes();
   void editType();
+  void contextMenuRequested( QListViewItem* i, const QPoint& p, int c );
 
 private:
   QListViewItem* newListItem( Macro* m );
